After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707747 - Can not log into Facebook Chat using X-FACEBOOK-PLATFORM
Can not log into Facebook Chat using X-FACEBOOK-PLATFORM
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Auth client
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
: 696284 703419 707743 710927 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-09-09 07:20 UTC by Guillaume Desmottes
Modified: 2013-11-11 10:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
SASL: fix facebook mechanism (2.78 KB, patch)
2013-10-31 17:40 UTC, Xavier Claessens
none Details | Review
SASL: fix facebook mechanism (3.09 KB, patch)
2013-10-31 17:53 UTC, Xavier Claessens
committed Details | Review

Description Guillaume Desmottes 2013-09-09 07:20:16 UTC
I reinstalled my system with Fedora 19 a couple of weeks ago. I configured my Facebook account in GOA and it worked just fine. After a few days it started failing to connect. I assumed it was because of fdo#68829 and so didn't pay much attention. But now I'm running Gabble 0.18.1 where this bug has been fixed and I still can't connect.

Looking at gabble logs, I get an auth error:
(telepathy-gabble:21055): wocky-DEBUG: auth_failed: wocky-sasl-auth.c:274: Authentication failed!: Authentication failed: not-authorized
(telepathy-gabble:21055): gabble-DEBUG: gabble_server_sasl_channel_fail (server-sasl-channel.c:959): auth failed: WOCKY_AUTH_ERROR_FAILURE (#6): Authentication failed: not-authorized

I guess that's because the token has expired or something. But GOA doesn't detect this error and so doesn't allow me to re-auth as it does with my Google account.
Comment 1 Debarshi Ray 2013-09-16 12:24:55 UTC
I tried using an invalid access_token (deleted some characters from the token using seahorse) and calling EnsureCredentials on the account (using d-feet) resulted in the Online Accounts panel detecting it.

So, something else is going on here because a supposedly valid token is not working with XMPP.

/me keeps digging
Comment 2 Debarshi Ray 2013-09-16 15:08:20 UTC
It doesn't work with Ubuntu/UOA/Empathy either. I am guessing something broke at Facebook's end.
Comment 3 Michael Catanzaro 2013-10-11 02:36:14 UTC
*** Bug 703419 has been marked as a duplicate of this bug. ***
Comment 4 Debarshi Ray 2013-10-17 09:52:19 UTC
*** Bug 707743 has been marked as a duplicate of this bug. ***
Comment 5 Debarshi Ray 2013-10-27 16:22:47 UTC
*** Bug 710927 has been marked as a duplicate of this bug. ***
Comment 6 Joachim Hansen 2013-10-31 10:56:08 UTC
It's broken in Pidgin to.
Comment 7 Joachim Hansen 2013-10-31 11:00:26 UTC
It's broken in Pidgin to.
Comment 8 Debarshi Ray 2013-10-31 17:39:33 UTC
Reassigning to empathy because it handles the SASL challenge.
Comment 9 Xavier Claessens 2013-10-31 17:40:47 UTC
Created attachment 258680 [details] [review]
SASL: fix facebook mechanism

libsoup was escaping '_' and '.' in the challenge response but the
facebook server is not expecting that.
Comment 10 Xavier Claessens 2013-10-31 17:53:27 UTC
Created attachment 258681 [details] [review]
SASL: fix facebook mechanism

libsoup was escaping '_' and '.' in the challenge response but the
facebook server is not expecting that.
Comment 11 Debarshi Ray 2013-11-01 11:36:27 UTC
Review of attachment 258681 [details] [review]:

Looks good to me. I tried it locally and it can now authenticate using X-FACEBOOK-PLATFORM.

A minor nitpick. I would probably change the summary of the commit message to be something like this so that it is consistent with the style used in Empathy:
"sasl-mechanisms: Fix X-FACEBOOK-PLATFORM to satisfy new Facebook server"
Comment 12 Debarshi Ray 2013-11-01 11:38:28 UTC
Comment on attachment 258681 [details] [review]
SASL: fix facebook mechanism

Oh, it is already pushed. Cool. I didn't notice that. :-)
Comment 13 Guillaume Desmottes 2013-11-11 09:57:51 UTC
*** Bug 696284 has been marked as a duplicate of this bug. ***
Comment 14 Guillaume Desmottes 2013-11-11 10:12:34 UTC
This has been fixed in Empathy 3.10.2 and 3.8.5.

Rishi: any chance to have 3.8.5 updated in F19?
Comment 15 Debarshi Ray 2013-11-11 10:19:33 UTC
(In reply to comment #14)
> This has been fixed in Empathy 3.10.2 and 3.8.5.
> 
> Rishi: any chance to have 3.8.5 updated in F19?

I backported the fix for this bug to F19 last week:
https://admin.fedoraproject.org/updates/FEDORA-2013-20481/empathy-3.8.4-2.fc19