SASL: fix facebook mechanism

libsoup was escaping '_' and '.' in the challenge response but the
facebook server is not expecting that.

https://bugzilla.gnome.org/show_bug.cgi?id=707747